# cpp-demo-project

./: .clang-format  .clang-tidy  .clangd  .gersemirc  .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  PROJECT_STRUCTURE.md  README.md  main.cpp
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-start.sh
.devcontainer/apt/sources.list.d/: init.sh  ubuntu.sources
.devcontainer/sources.list.d/: ubuntu-ports.sources
.github/workflows/: build-and-test.yml
binding/: .clang-tidy  CMakeLists.txt  algorithms_binding.cpp  containers_binding.cpp  cpp_features.cpp  exceptions_binding.cpp  memory_binding.cpp  random_binding.cpp  shapes_binding.cpp  timing_binding.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake  ModuleHelpers.cmake  README.md  StaticAnalysis.cmake  config.cmake.in  demo-config.cmake.in
examples/: CMakeLists.txt  algorithms_example.cpp  containers_example.cpp  exceptions_example.cpp  full_demo_example.cpp  full_example.cpp  memory_example.cpp  random_example.cpp  shapes_example.cpp  timer_example.cpp  timing_example.cpp
include/algorithms/: stl.hpp  stl_demos.hpp
include/concepts/: arithmetic_concepts.hpp  callable_concepts.hpp  concepts.hpp  container_concepts.hpp  string_concepts.hpp  utility_concepts.hpp
include/containers/: container.hpp
include/exceptions/: custom_exception.hpp  exception_handler.hpp  result.hpp
include/memory/: resource_management.hpp  resource_manager.hpp  smart_pointers.hpp  unique_resource.hpp
include/random/: random_gen.hpp
include/shapes/: circle.hpp  rectangle.hpp  shape.hpp
include/strings/: string_ops.hpp
include/timing/: benchmark.hpp  timer.hpp
python/: README.md  __init__.py  algorithms.py  containers.py  exceptions.py  memory.py  pyproject.toml  random.py  shapes.py  timing.py
python/examples/: algorithms_example.py  containers_example.py  exceptions_example.py  integration_example.py  memory_example.py  random_example.py  shapes_example.py  timing_example.py
python/scripts/: __init__.py  build.py
python/src/: algorithms.py  containers.py  exceptions.py  random.py  shapes.py  timing.py
python/src/demo/: __init__.py  algorithms.py  containers.py  exceptions.py  random.py  shapes.py  timing.py
python/tests/: __init__.py  test_algorithms.py  test_containers.py  test_exceptions.py  test_memory.py  test_random.py  test_shapes.py  test_timing.py
python_examples/: README.md  advanced_usage.py  basic_usage.py
python_tests/: __init__.py  conftest.py  test_algorithms.py  test_containers.py  test_exceptions.py  test_memory.py  test_shapes.py  test_timing.py
src/: CMakeLists.txt  main.cpp
src/algorithms/: CMakeLists.txt  stl_demos.cpp
src/concepts/: CMakeLists.txt
src/containers/: CMakeLists.txt  container.cpp
src/exceptions/: CMakeLists.txt  custom_exception.cpp  exception_handler.cpp
src/memory/: CMakeLists.txt  resource_management.cpp  resource_manager.cpp  smart_pointers.cpp
src/random/: CMakeLists.txt  random_gen.cpp
src/shapes/: CMakeLists.txt  circle.cpp  rectangle.cpp  shape.cpp
src/strings/: CMakeLists.txt  string_ops.cpp
src/timing/: CMakeLists.txt  benchmark.cpp  timer.cpp
tests/: .clang-tidy  CMakeLists.txt  test_algorithms.cpp  test_concepts.cpp  test_containers.cpp  test_exceptions.cpp  test_main.cpp  test_memory.cpp  test_random.cpp  test_shapes.cpp  test_timer.cpp  test_timing.cpp
